cambiar la ruta del logo

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "categories": [
     "Themes"
   ],
-  "icon": "/icons/sena-icon.png",
+  "icon": "icons/sena-icon.png",
   "author": {
     "name": "Eusebio suarez",
     "email": "eusebiosuaresmartines@gmail.com",
